spacing-issues

--- a/src/output.css
+++ b/src/output.css
@@ -1390,6 +1390,11 @@
       padding-right: calc(var(--spacing) * 6);
     }
   }
+  .lg\:pl-1 {
+    @media (width >= 62rem) {
+      padding-left: calc(var(--spacing) * 1);
+    }
+  }
   .lg\:pl-12 {
     @media (width >= 62rem) {
       padding-left: calc(var(--spacing) * 12);
